# CopmputerGraphic

./: .gitignore  README.md
Filters/filters/: Form1.cs
RLC/: CMakeLists.txt  main.cpp
Raytracing/: CMakeLists.txt  main.cpp
Raytracing/include/: scene.h  shader.h
Raytracing/src/: CMakeLists.txt  scene.cpp  shader.cpp
Segmentation/: CMakeLists.txt  main.cpp
black-white/: CMakeLists.txt  histogram.cpp  main.cpp
lab1/: filters.sln
lab1/filters/: Form1.Designer.cs  Form1.cs  Form1.resx  filters.cs  filters.csproj
lab1/filters/Properties/: AssemblyInfo.cs
noise/: CMakeLists.txt  main.cpp
noise/include/: gammaNoise.h  grayScale.h  historgram.h  morfology.h  noise.h
noise/src/: CMakeLists.txt  gammaNoise.cpp  grayScale.cpp  morfology.cpp  noise.cpp  rgbtogray.cpp
opengl/: CMakeLists.txt
opengl/app/: CMakeLists.txt  main.cpp
opengl/include/: bin.h  view.h
opengl/src/: CMakeLists.txt  bin.cpp  view.cpp
